Added simple localhost server with routing.

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <title>Home // Jam Good!</title>
+    <title>Home // Jamn Good Jelly!</title>
   </head>
 
   <body>
@@ -13,8 +13,10 @@
       <h1>Home</h1>
 
       <div class="list-container">
-        {%PRODUCTS_LIST%}
+        <!-- Some products will be displayed here.-->>
       </div>
+
+      <!-- Sidebar and other content will go here.-->
     </div>
   </body>
 </html>
