--- a/templates/product-list.html
+++ b/templates/product-list.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <title>Products // Jam Good!</title>
+    <title>Products // Jamn Good Jelly!</title>
   </head>
 
   <body>
@@ -17,7 +17,7 @@
           <span class="emoji-left">👈</span>Back
         </a>
         <div class="product__list">
-          <div class="product--0">
+          <div class="product--#">
             <img span="productImage" src="#" alt="{%PRODUCTNUMBER%}" />
             <p span="productName">{%PRODUCTNAME%}</p>
             <p span="productPrice">{%PRODUCTPRICE%}</p>
