Add other pages and create style sheet

--- a/templates/about.html
+++ b/templates/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <title>Product Details // Jamn Good Jelly!</title>
+    <title>About Us // Jamn Good Jelly!</title>
   </head>
 
   <body>
@@ -21,21 +21,20 @@
         </ul>
       </nav>
     </header>
-    <div id="product-container">
-      <div id="product-image">
+    <div id="about-container">
+      <div id="about-image">
         <img src="#" />
       </div>
-      <div id="product-description">
-        <h2 class="large-header">{%PRODUCTNAME%}</h2>
-        <p>{%PRODUCTDESCRIPTION%}</p>
-        <p>Size:</p>
-        <select name="size" id="product-size">
-          <option value="8">8 oz</option>
-          <option value="12">12 oz</option>
-        </select>
-        <p>Quantity:</p>
-        <input type="text" id="quantity" name="quantity" />
-        <button type="button">Add to cart</button>
+      <div id="about-description">
+        <h2 class="large-header">About Us</h2>
+        <p>
+          We're a husband and wife duo living in the Pacific Northwest who love
+          the outdoors, our country, and quality food. We believe in working
+          hard, caring for our neighbors like we care for ourselves, and being
+          faithful stewards of the resources Christ has entrusted to us. This
+          means that we focus on giving you a tasty fairly priced product that
+          we've picked, canned, and packed ourselves.
+        </p>
       </div>
     </div>
   </body>
