--- a/templates/index.html
+++ b/templates/index.html
@@ -9,14 +9,57 @@
   </head>
 
   <body>
-    <div class="container">
-      <h1>Home</h1>
-
-      <div class="list-container">
-        <!-- Some products will be displayed here.-->>
-      </div>
-
-      <!-- Sidebar and other content will go here.-->
+    <header id="site-masthead">
+      <img src="#" alt="Logo" />
+      <h1>Jamn Good Jelly</h1>
+      <nav id="nav-main">
+        <ul>
+          <li><a href="#">Products</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><img src="#" alt="Shopping cart" /></li>
+        </ul>
+      </nav>
+    </header>
+    <div id="home-container">
+      <h2>Homemade jam, picked just for you.</h2>
+      <ul class="featured-products">
+        <li>
+          <img src="#" />
+          <p class="product-name">%PRODUCTNAME%</p>
+          <p class="product-price">%PRODUCTPRICE%</p>
+        </li>
+        <li>
+          <img src="#" />
+          <p class="product-name">%PRODUCTNAME%</p>
+          <p class="product-price">%PRODUCTPRICE%</p>
+        </li>
+        <li>
+          <img src="#" />
+          <p class="product-name">%PRODUCTNAME%</p>
+          <p class="product-price">%PRODUCTPRICE%</p>
+        </li>
+      </ul>
+      <h2>What sets us apart</h2>
+      <ul class="company-values">
+        <li>
+          <img src="#" />
+          <h3>Ingredients</h3>
+          <p>
+            Our jams are 100% natural, containing no artificial sweeteners or
+            preservatives.
+          </p>
+        </li>
+        <li>
+          <img src="#" />
+          <h3>Care</h3>
+          <p>
+            Each jar of jam you buy has been handmade by us for you. Unlike
+            large factories that mass produce jams, we get hands on with our
+            product to ensure it looks and tastes wonderful.
+          </p>
+        </li>
+      </ul>
     </div>
   </body>
 </html>
