--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,7 @@ body {
 }
 
 .cart-dec-btn {
-  right: 22px;
+  right: 38px;
   width: 10px;
   margin-right: 5px;
 }
@@ -83,33 +83,35 @@ body {
 }
 
 .cart-inc-btn {
-  right: 0px;
+  right: 16px;
 }
 
 .cart-item-list ul {
   display: flex;
   flex-direction: column;
+  height: 369px;
+  overflow: scroll;
+  overflow-x: hidden;
 }
 
 .cart-item-list li {
   position: relative;
-  margin: 10px auto 15px auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  width: 180px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.cart-item-list li:nth-child(even) {
+  background-color: #e5e5e8;
+  padding-bottom: 10px;
+  margin-bottom: 0px;
 }
 
 .cart-item-list li p {
   margin: auto;
   display: inline-block;
-}
-
-p.delete-btn {
-  color: #ffffff;
-  padding: 1px 6px 1px 6px;
-  background-color: #9e42b8;
-  border-radius: 50%;
-  position: absolute;
-  text-align: center;
-  right: 0px;
-  top: 5px;
 }
 
 .cart-quantity-btn {
@@ -156,6 +158,19 @@ p.delete-btn {
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
   margin-left: 10px;
+}
+
+.delete-btn {
+  color: #ffffff;
+  padding: 1px 6px 1px 6px;
+  background-color: #9e42b8;
+  border-radius: 50%;
+  position: absolute;
+  height: 21px;
+  text-align: center;
+  vertical-align: middle;
+  right: 8px;
+  top: 8px;
 }
 
 .featured-products {
@@ -457,3 +472,25 @@ ul {
   padding: 0px;
   margin: 0px;
 }
+
+/* Custom scroll bar */
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+/* */
