Add CSS for the mobile design

--- a/styles.css
+++ b/styles.css
@@ -290,6 +290,10 @@ img {
   margin-top: 10px;
 }
 
+.mobile-menu-btn {
+  display: none;
+}
+
 .nav-logo {
   margin-top: 5px;
   margin-right: 10px;
@@ -503,8 +507,10 @@ ul {
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
-/* */
 
+/*****************/
+/* Tablet */
+/*****************/
 @media (max-width: 768px) {
   #about-container {
     margin-left: 20px;
@@ -537,12 +543,85 @@ ul {
   }
 }
 
+/*****************/
+/* Mobile */
+/*****************/
 @media (max-width: 320px) {
+  .black-background {
+    background-color: #b0b0b9;
+  }
   body {
     width: 320px;
   }
 
+  .featured-products {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .featured-products li {
+    flex-direction: row;
+  }
+
+  .featured-products li img {
+    border-radius: 50%;
+  }
+
+  .featured-products li:last-child {
+    display: none;
+  }
+
+  .featured-product-name {
+    font-size: 1.125rem;
+  }
+
+  .featured-product-price {
+    font-size: 0.9375rem;
+  }
+
   h1 {
-    margin-right: 20px;
+    margin-right: 40px;
+    width: 140px;
+  }
+
+  .mobile-menu-btn {
+    display: block;
+    border: 1px solid #ffffff;
+    border-radius: 3px;
+    padding: 6px;
+    margin: 0px 0px 0px 6px;
+  }
+
+  #nav-main {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    left: 0px;
+    top: 60px;
+    width: 320px;
+    background-color: #333;
+    visibility: hidden;
+  }
+
+  #nav-main a {
+    text-align: left;
+    padding: 14px 16px;
+  }
+
+  #nav-main a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+
+  .shopping-cart {
+    padding: 3px 16px 14px 16px;
+  }
+
+  .shopping-cart:hover {
+    background-color: #ddd;
+  }
+
+  .shopping-cart img:hover {
+    filter: invert(100%);
   }
 }
