--- a/styles.css
+++ b/styles.css
@@ -266,6 +266,10 @@ header {
   height: 60px;
 }
 
+.hidden {
+  display: none;
+}
+
 img {
   max-width: 100%;
 }
@@ -549,22 +553,64 @@ ul {
 @media (max-width: 320px) {
   .black-background {
     background-color: #b0b0b9;
+    top: 15px;
+    left: 70px;
+    vertical-align: middle;
+    width: 200px;
+    height: 63px;
   }
+
   body {
     width: 320px;
+  }
+
+  .company-values {
+    margin-left: 25px;
+  }
+
+  .company-values li img {
+    width: 90px;
+    height: 90px;
+  }
+
+  .company-value-text {
+    width: 165px;
+  }
+
+  .company-value-text h3 {
+    font-size: 1.375rem;
+  }
+
+  .company-value-text p {
+    font-size: 1rem;
+    width: 165px;
   }
 
   .featured-products {
     display: flex;
     flex-direction: column;
+    margin-right: 0px;
+    margin-bottom: 40px;
   }
 
   .featured-products li {
     flex-direction: row;
+    margin-left: 25px;
+    margin-bottom: 15px;
+  }
+
+  .featured-products li:nth-child(2) {
+    margin-left: 25px;
   }
 
   .featured-products li img {
     border-radius: 50%;
+    border: 1px solid #403637;
+    z-index: 1;
+  }
+
+  .featured-products li img.mobile-img {
+    position: relative;
   }
 
   .featured-products li:last-child {
@@ -573,15 +619,28 @@ ul {
 
   .featured-product-name {
     font-size: 1.125rem;
+    color: black;
+    margin-left: 30px;
+    opacity: 1;
   }
 
   .featured-product-price {
     font-size: 0.9375rem;
+    color: black;
+    margin-left: 30px;
   }
 
   h1 {
     margin-right: 40px;
     width: 140px;
+  }
+
+  h2.home-page-header.tagline {
+    margin-top: 70px;
+  }
+
+  .hidden {
+    display: block;
   }
 
   .mobile-menu-btn {
@@ -611,6 +670,10 @@ ul {
   #nav-main a:hover {
     background-color: #ddd;
     color: black;
+  }
+
+  p {
+    font-size: 1rem;
   }
 
   .shopping-cart {
